--- a/modal/index.html
+++ b/modal/index.html
@@ -1,83 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modal</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-        button {
-            background-color: #ccc;
-            padding: 10px;
-        }
+      button {
+        background-color: #ccc;
+        padding: 10px;
+      }
 
-        #modal {
-            width:400px;
-            height:200px;
-            text-align: center;
-            box-shadow: 5px 5px 0 black;
-            border: 2px black solid;
-            background-color: white;
-            background-image: linear-gradient(#fff, #ccc);
-        }
+      #modal {
+        width: 400px;
+        height: 200px;
+        text-align: center;
+        box-shadow: 5px 5px 0 black;
+        border: 2px black solid;
+        background-color: white;
+        background-image: linear-gradient(#fff, #ccc);
+      }
 
-        body, #backdrop {
-            height: 100vh;
-        }
+      body,
+      #backdrop {
+        height: 100vh;
+      }
 
-        #backdrop {
-            background-color: rgba(0,0,0,.6);
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-        }
+      #backdrop {
+        background-color: rgba(0, 0, 0, 0.6);
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+      }
 
-        #backdrop.open {
-            display:flex;
-            justify-content: center;
-            align-items: center;
-        }
+      #backdrop.open {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Modals/Popups</h1>
-    <img src="assets/cat.jpg" alt="photo of cat" width="300" height="200">
-    <br>
+    <img src="assets/cat.jpg" alt="photo of cat" width="300" height="200" />
+    <br />
     <button onclick="handleOpen()" id="open">Open (custom)</button>
     <div id="backdrop">
-        <div id="modal">
-            <h1>Header</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, laborum. Non sequi minima illum officiis natus cumque voluptate reiciendis hic distinctio amet alias quae numquam, explicabo praesentium, iste aliquam harum.</p>
-            <button onclick="handleClose()">Close</button>
-        </div>
+      <div id="modal">
+        <h1>Header</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim,
+          laborum. Non sequi minima illum officiis natus cumque voluptate
+          reiciendis hic distinctio amet alias quae numquam, explicabo
+          praesentium, iste aliquam harum.
+        </p>
+        <button onclick="handleClose()">Close</button>
+      </div>
     </div>
     <script>
-        const backdrop = document.getElementById('backdrop');
-        const open = document.getElementById('open');
-        const close = document.getElementById('close');
-        const dialog = document.getElementsByTagName('dialog')[0];
-        function handleOpen() {
-            backdrop.classList.add('open');
-            open.setAttribute('disabled', true);
-            //TODO: fix
-            /*
+      const backdrop = document.getElementById("backdrop");
+      const open = document.getElementById("open");
+      const close = document.getElementById("close");
+      const dialog = document.getElementsByTagName("dialog")[0];
+      function handleOpen() {
+        backdrop.classList.add("open");
+        open.setAttribute("disabled", true);
+        //TODO: fix
+        /*
             console.log(close);
             console.log(backdrop.style);
             close.focus();
             */
-        }
+      }
 
-        function handleClose() {
-            backdrop.classList.remove('open');
-            open.removeAttribute('disabled');
-        }
+      function handleClose() {
+        backdrop.classList.remove("open");
+        open.removeAttribute("disabled");
+      }
     </script>
-</body>
+  </body>
 </html>
