--- a/calculator/index.html
+++ b/calculator/index.html
@@ -6,7 +6,7 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <script src="script.js" defer></script>
+    <script src="build/script.js" defer></script>
 </head>
 <body>
     <div class="calculator-container">
